syntax = "proto3";
option java_multiple_files = true;
package com.joao.ingredient;

message IngredientRequest {
  string nameOfIngredient = 1;
}

message IngredientResponse {
  int32 code = 1;
}

service IngredientService {
  rpc getIngredient(IngredientRequest) returns (IngredientResponse);
}
